removes rpc CreateUser (it is replaced by RegisterNewUser/VerifyNewUser flow)
